Prevented screen readers from reading ellipsis from ellipsiisOverflow--multiple mixin.

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -217,6 +217,9 @@
 
   /*Pseudo element containing the ellipsis*/
   &::before {
+    /*speak*/
+    speak: none;
+    /*content*/
     content: '...';
     /*position*/
     position: absolute;
